infrastructure/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-hello-api-service
spec:
  selector:
    app: go-hello-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
