infrastructure/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-hello-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.hello.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-hello-api-service
                port:
                  number: 80
